going well with the updating

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -320,6 +320,8 @@ alyssa.cirtwill@gmail.com\\
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
 
+    [[check that all the figs are with Zillis]]
+
     %It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions. Since Jensen's inequality states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable, any uncertainty in the values of $\lambda$ could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we %begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. 
     In the following section, we will provide an empirical example based on the well-sampled system of \emph{Salix}  plants, herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}; see Box~\ref{box1} or \emph{Appendix S2} for a description). 
     %This tripartite network can be examined as two bipartite networks, namely \emph{Salix}-galler and galler-natural enemy networks. 
@@ -513,6 +515,7 @@ alyssa.cirtwill@gmail.com\\
 % Done, think it works for all N
 
 %DG: otherwise the difference between the two interaction types is very interesting and useful to show the effect of the priors. Bravo ! 
+[[Update these two figs with Zillis data.]]
       \begin{figure}[ht]
         \caption{Using prior distribution based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-natural enemy component. This is likely because the prior distribution for the galler-natural enemy component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
         \label{Salix_pdfs}
@@ -529,11 +532,11 @@ alyssa.cirtwill@gmail.com\\
         \end{figure}
 
 
-    \begin{figure}[ht]
-    \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer for networks assembled using posterior distributions based on a smaller, North American \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
-    \label{posterior_webs}    
-    \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
-    \end{figure}
+    % \begin{figure}[ht]
+    % \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer for networks assembled using posterior distributions based on a smaller, North American \emph{Salix}-galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
+    % \label{posterior_webs}    
+    % \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
+    % \end{figure}
 
     \begin{figure}[ht]
     \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer for networks assembled using posterior distributions based on a single subweb in the~\citet{Kopelke2017} dataset (Zillis). We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties than the range covered by networks with varying detection probabilities. The value of each property decreases with the proportion of links included in the detection-filter networks.}
